# a3

./: .gitignore  README.md  apphost.run.json  apphost.ts  aspire.config.json  commands.ts  issue-body.md  package-lock.json  package.json  tsconfig.json
.aspire/: settings.json
api-advisor/: main.py  pyproject.toml  requirements.txt
api-bart/: Dockerfile  go.mod  go.sum  main.go
api-boston/: main.py  pyproject.toml  requirements.txt
api-dc/: Cargo.toml  Dockerfile
api-dc/src/: main.rs
api-nyc/: Dockerfile  Program.cs  api-nyc.cs  api-nyc.run.json
app/: apphost.ts  package.json  tsconfig.json
app/api-bart/: go.mod  main.go
app/api-boston/: pyproject.toml  requirements.txt
app/api-nyc/: api-nyc.cs
app/api-nyc/artifacts/api-nyc/: api-nyc  api-nyc.deps.json
app/frontend/: package-lock.json  vite.config.ts
app/frontend/src/: App.tsx  main.tsx
app/frontend/src/api/: client.ts
app/frontend/src/components/: ServiceAlerts.tsx  StatusBriefing.tsx  TransitDashboard.tsx
app/frontend/src/hooks/: useTransitData.ts
app/frontend/src/types/: transit.ts
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: CitySelector.tsx  RouteAdvisor.tsx  ServiceAlerts.tsx  StopPicker.tsx  TransitDashboard.tsx
frontend/src/hooks/: useTransitData.ts
frontend/src/types/: transit.ts
