[project]
name = "api-advisor"
version = "0.1.0"
description = "GenAI Route Advisor — uses transit APIs and OpenAI to recommend routes"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "openai",
    "opentelemetry-instrumentation-openai-v2",
    "redis",
    "opentelemetry-distro",
    "opentelemetry-exporter-otlp-proto-grpc",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-instrumentation-httpx",
    "opentelemetry-instrumentation-redis",
]

[project.scripts]
start = "uvicorn main:app --host 0.0.0.0 --port 8080"
